fix: increased padding and spacing fixes

--- a/assets/scss/_global.scss
+++ b/assets/scss/_global.scss
@@ -7,7 +7,7 @@
   display: inline-flex;
   align-items: center;
   justify-content: center;
-  padding: $padding;
+  padding: $paddingButton;
   color: $pure-white;
   font-weight: 700;
   font-family: $font-family;
