--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -10,6 +10,7 @@ $patreon: #F96854;
 $instagram: #E4405F;
 $twitter: #1DA1F2;
 
-$padding: 15px;
+$padding: 25px;
+$paddingButton: 15px;
 
 $font-family: Quicksand, sans-serif;
